--- a/WebContent/Style.css
+++ b/WebContent/Style.css
@@ -1,5 +1,118 @@
 @CHARSET "UTF-8";
 
+
+/*BARRA DI NAVIGAZIONE*/
+nav { background-color: #393939; 
+	  font-weight: bold;
+}
+
+nav p {
+color: white;
+}
+
+div#div1 {
+ position: absolute;
+  right: 10%;
+  left: 70%;
+  top: 6.2%;
+}
+
+div#div2 {
+  position: absolute;
+  right: 60%;
+  left: 17%;
+  top: 6.2%;
+}
+
+nav ul {
+position: relative;
+	width: 300px;
+	height: 30px;
+	list-style: none;
+	padding: 0px;
+	text-align: center;
+    color:white;
+}
+
+nav ul li {
+
+	position: relative;
+	width: 98px;
+    height: 30px;
+	float: left;
+	border-right: 4px solid #393939;
+    border-left: 4px solid #393939;
+	background: #393939;
+}
+
+
+nav ul li ul {
+position: relative;
+	width: 30px; /*Controllare */
+	height: 90px; /*Controllare */
+	top: 30px;
+	display: none;
+	text-decoration:none;
+}
+
+
+
+/*questo è per il menù a comparsa*/
+li#link:hover ul{
+position: absolute;
+display: block;
+
+}
+
+li#link:hover {
+color: #00ea38;
+background-color: #808080;
+}
+
+li.nb:hover {
+color: #00ea38;
+background-color: #808080;
+}
+
+a.nbup:visited, a.nbup:link{
+color: #FFFFFF;
+text-decoration:none;
+}
+
+a.nbup:hover {
+color: #00ea38;
+}
+
+li.mt {
+background-color: #FFFFFF;
+color: #000000;
+}
+
+a.lg:visited, a.lg:link{
+color: #000000;
+text-decoration:none;
+}
+
+a.lg:hover {
+color: #00ea38;
+}
+
+li.mt{
+border-right: 4px solid white;
+border-left: 4px solid white;
+}
+
+nav ul li ul li {
+clear: left;
+}
+
+
+
+
+
+
+
+
 html {
 	width: 500px;
 	margin: 10px auto;
